<?xml version="1.0" encoding="UTF-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">After Google pinyin input method</string>
    <string name="ime_name">After Google pinyin input method</string>
    <string name="ime_settings_activity_name">Google pinyin input method Settings</string>
    <!-- version = apk(java) + ime engine + sys dict + [hotlist (TBD)] -->
    <string name="version">1.0.0</string>

    <!-- Used by the toggle keys in soft keyboards. -->
    <string name="toggle_cn">0</string>
    <string name="toggle_cn_cand">1</string>
    <string name="toggle_en_lower">2</string>
    <string name="toggle_en_upper">3</string>
    <string name="toggle_en_sym1">4</string>
    <string name="toggle_en_sym2">5</string>
    <string name="toggle_smiley">6</string>
    <string name="toggle_enter_go">7</string>
    <string name="toggle_enter_search">8</string>
    <string name="toggle_enter_send">9</string>
    <string name="toggle_enter_next">10</string>
    <string name="toggle_enter_done">11</string>
    <string name="toggle_row_cn">12</string>
    <string name="toggle_row_en">13</string>
    <string name="toggle_row_uri">14</string>
    <string name="toggle_row_emailaddress">15</string>
    <string name="toggle_phone_sym">3</string>

    <!-- settings related -->
    <string name="setting_sound_key">setting_sound_key</string>
    <string name="setting_vibrate_key">setting_vibrate_key</string>
    <string name="setting_prediction_key">setting_prediction_key</string>
    <string name="setting_switch_key">setting_switch_key</string>
    <string name="setting_advanced_key">setting_advanced_key</string>
    <string name="setting">Google pinyin input method Settings</string>
    <string name="setting_sound_key_title">Key Sound</string>
    <string name="setting_vibrate_title">Key vibration</string>
    <string name="setting_prediction_title">Associating inputing</string>
    <string name="setting_switch_title">Switch in both Chinese and English</string>
    <string name="setting_switch_shift_space_title">Shift-space</string>
    <string name="setting_enabled">ON</string>
    <string name="setting_disabled">OFF</string>
    <string name="setting_others">Other Settings</string>
    <string name="setting_others_summary">Dictionary synchronization etc</string>
    <string name="action_settings"></string>

</resources>